# stanford-hci

./: .dockerignore  .env  .env.dev  .env.example  .env.prod  .env.template  .flake8  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  LICENSE.md  Pipfile  README.md  TODO.md  compose.yaml  conftest.py  justfile  pyproject.toml  requirements-lock.txt  requirements.txt  routes.txt  run  tasks.py
.github/actions/install-dependencies/: action.yml
.github/actions/install-just/: action.yml
.github/actions/install-python-dependencies/: action.yml
.github/workflows/: ci.yml
.github/workflows.bak/: ci.yml
assets/: package.json
doc/: README.md  explanation.md  howto.md  tutorial.md
doc/adr/: 0001-record-architecture-decisions.md  0002-use-docker-and-django.md  0003-use-divio-documentation-system.md
doc/img/: wireframes.excalidraw
docs/: conventions.md  explanations.md
docs/source/: conf.py  explanations.rst  how-to-guides.rst  index.rst  reference-guides.rst  tutorials.rst
example/example/: settings.py
infra/: .terraform.lock.hcl  auto_scaling.tf  ecs.tf  iam.tf  load_balancer.tf  logs.tf  main.tf  network.tf  outputs.tf  rds.tf  registry.tf  secrets.tf  secrets.tfvars.enc  security.tf  subdomain.tf  variables.tf
infra/tfvars/: production.tfvars  production_secrets.tfvars.enc  secrets.tfvars.enc  staging.tfvars  staging_secrets.tfvars.enc
scripts/: deploy.py  migrate.py  superuser.py  update.py  util.py
src/: constants.py  manage.py
src/apps/core/: apps.py  urls.py
src/apps/core/constants/: third_party.py
src/apps/core/templates/core/: home.html
src/apps/core/templates/includes/: _dummy_all_curations.html
src/apps/core/views/: home.py
src/apps/curations/: apps.py  urls.py
src/apps/curations/admin/: __init__.py  step_1.py  step_2.py  step_3.py
src/apps/curations/forms/: step_1.py  step_2.py  step_3.py
src/apps/curations/migrations/: 0001_initial.py
src/apps/curations/models/: __init__.py  association.py  step_1.py  step_2.py  step_3.py
src/apps/curations/templates/curations/: edit.html
src/apps/curations/views/: curation.py  edit.py
src/apps/diseases/: apps.py  urls.py
src/apps/diseases/admin/: __init__.py  disease.py
src/apps/diseases/clients/: disease.py  disease_contract_test.py  mondo.py  mondo_test.py
src/apps/diseases/constants/: services.py  views.py
src/apps/diseases/forms/: disease.py  mondo.py
src/apps/diseases/migrations/: 0001_initial.py  0002_alter_disease_mondo_id.py  0003_rename_disease_mondo.py
src/apps/diseases/models/: __init__.py  disease.py  mondo.py
src/apps/diseases/schemas/: mondo.py
src/apps/diseases/services/: disease.py  disease_test.py  mondo.py  mondo_test.py
src/apps/diseases/templates/diseases/: disease.html
src/apps/diseases/views/: disease.py  mondo.py
src/apps/home/: apps.py  urls.py
src/apps/home/templates/core/: home.html
src/apps/home/templates/home/: index.html
src/apps/home/templates/includes/: _add_buttons.html
src/apps/home/views/: home.py
src/apps/markers/: apps.py  urls.py
src/apps/markers/admin/: __init__.py  allele.py
src/apps/markers/clients/: allele.py  allele_test.py
src/apps/markers/constants/: services.py
src/apps/markers/forms/: allele.py
src/apps/markers/migrations/: 0001_initial.py  0002_alter_allele_options_alter_allele_ipd_accession_and_more.py  0003_alter_allele_ipd_accession.py
src/apps/markers/models/: __init__.py  allele.py
src/apps/markers/schemas/: car.py
src/apps/markers/services/: allele.py  allele_test.py
src/apps/markers/templates/markers/: allele.html  new_allele.html
src/apps/markers/views/: allele.py  new_allele.py
src/apps/publications/: apps.py  urls.py
src/apps/publications/admin/: __init__.py  pubmed.py
src/apps/publications/clients/: pubmed.py  pubmed_test.py
src/apps/publications/constants/: services.py
src/apps/publications/forms/: pubmed.py
src/apps/publications/migrations/: 0001_initial.py  0002_alter_pubmedarticle_pubmed_id_and_more.py  0003_alter_pubmedarticle_pubmed_id.py
src/apps/publications/models/: __init__.py  pubmed.py
src/apps/publications/selectors/: pubmed.py  pubmed_test.py
src/apps/publications/services/: pubmed.py  pubmed_test.py
src/apps/publications/views/: all_pubmed.py  new_pubmed.py  pubmed.py
src/apps/users/: apps.py  urls.py
src/apps/users/admin/: __init__.py  affiliation_admin.py  curator_admin.py
src/apps/users/constants/: models.py
src/apps/users/forms/: signup.py  signup_test.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_affiliation_options_alter_curator_options.py
src/apps/users/models/: __init__.py  affiliation.py  curator.py
src/apps/users/views/: signup.py  signup_test.py
src/base/: clients.py  selectors.py  services.py  views.py
src/config/: asgi.py  celery.py  gunicorn.py  middleware.py  settings.py  urls.py  wsgi.py
src/config/settings/: base.py  dev.py  prod.py
src/hci/: admin.py  apps.py  asgi.py  forms.py  models.py  settings.py  tests.py  urls.py  views.py  wsgi.py
src/hci/migrations/: 0001_initial.py
src/hci/static/hci/: hci.css
src/hci/templates/: home.html  new_allele_haplotype.html  new_curation.html  new_disease.html
src/hci/templates/hci/: affiliation.html  base.html  index.html  nav.html  new_allele_haplotype.html  new_curation.html  new_disease.html  new_publication.html
src/hci/templates/pages/: affiliation.html
src/hci/templates/registration/: login.html
src/main/: settings.py  urls.py  wsgi.py
src/pages/: urls.py  views.py
src/pages/templates/pages/: home.html
src/score/: calculator.py  steps.py  tests.py  validator.py
src/static/: site.webmanifest
src/templates/hci/: all_curations.html  home.html  new_publication.html
src/templates/includes/: _external_link.html  _form_input.html  _form_select.html  _form_submit_button.html  _nav.html  external_link.html  icon.html  nav.html
src/templates/layouts/: base.html  nav.html
src/templates/registration/: login.html  signup.html
src/tests/integration/: routes_test.py
src/up/: apps.py  tests.py  urls.py  views.py
src/util/: secrets.py
(+11 files in other folders)
